--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -2,4 +2,44 @@
 {% block title%} Brownish - About us {% endblock %}
 {% block body %}
     <div id="page-type" style="display:none">aboutus</div>
+    <section class="about-us-information">
+        <h3>Vài nét về Brownish</h3>
+        <p>Brownish là doanh nghiệp thương mại điện tử các sản phẩm thời trang có trụ sở
+            chính tại Thành phố Hồ Chí Minh được thành lập vào năm 2023. Các sản phẩm chính của doanh nghiệp được sản xuất 
+            bằng những vật liệu thân thiện với môi trường.
+            <br> Đối với các sản phẩm <strong>may mặc thông dụng</strong>, quần áo được may bằng <strong>vải sợi tre</strong> với nguồn nguyên liệu hoàn toàn từ Việt
+            Nam với mức giá từ 150000 - 400000 VNĐ
+            <br> Đối với các sản phẩm <strong>may mặc cao cấp</strong>, hoàn toàn được dệt từ <strong>vải lanh, được trồng và dệt thủ công từ tỉnh Hà Giang</strong>. Đây là loại vải 
+            có độ bóng tự nhiên cao, bề mặt mịn màng cùng tính hút ẩm tốt nên rất phù hợp để sử dụng trong thời tiết nóng ẩm tại Việt Nam.
+        </p>
+    </section>
+    <section class="about-us-information">
+        <h3>Tầm nhìn</h3>
+        <p>Để thời trang bền vững đến mọi nhà <br>
+        Đến năm 2030, Brownish mong muốn trở thành một trong các thương hiệu nội dẫn đầu tại thị trường thời trang bền vững tại Việt
+        Nam và tiên phong cho thời trang Việt để vươn ra khu vực, đồng thời nâng cao ý thức của người dùng về thời trang bền vững của người 
+        dùng Việt.
+        </p>
+    </section>
+    <section class="about-us-information">
+        <h3>Sứ mệnh</h3>
+        <p>
+            Với mục đích phát triển bền vững và tinh thần bảo vệ môi trường, Brownish cống hiến cho sự sáng tạo và nỗ lực của mình để 
+            cung cấp cho người dùng những bộ quần áo và phụ kiện thanh lịch và đa năng được tạo nên từ chất liệu dễ tái chế và thân thiện 
+            với môi trường.
+        </p>
+    </section>
+    <section class="about-us-information">
+        <h3>Giá trị cốt lõi</h3>
+        <p>
+            <strong>Thấu hiểu</strong>: Chúng tôi với đội ngũ trẻ trung luôn cố gắng tìm hiểu giới trẻ để đáp ứng nhu cầu ngày càng đa dạng & 
+            nâng cao chất lượng cuộc sống của khách hàng.
+            <strong>Thân thiện</strong>: Những nhân công được làm việc trong môi trường lành mạnh sẵn sàng mang đến cho khách hàng sản phẩm và dịch vụ 
+            tốt nhất.
+            <strong>Sáng tạo</strong>: Những nhà thiết kế trẻ không ngừng nỗ lực để mang tới cho khách hàng những mẫu trang phục thanh lịch và độc đáo.
+            <strong>Bền vững</strong>: Chúng tôi ứng dụng công nghệ mới, sử dụng chất liệu hữu cơ có nguồn gốc hoàn toàn từ Việt Nam để hạn chế tối đa các chế phẩm có hại 
+            cho môi trường vào tạo nên những sản phẩm thân thiện với môi trường.
+        </p>
+    </section>
 {% endblock %}
+
