--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -27,7 +27,7 @@
         <div class="icons">
             
             <a href="#"><i class="ri-user-line"></i></a>
-            <a href="#"><i class="ri-shopping-cart-line"></i></a>
+            <a href="{% url 'shopping_cart' %}"><i class="ri-shopping-cart-line"></i></a>
             {% if user.is_authenticated %}
             <a href="{% url 'logout' %}"><i class="ri-logout-box-line"></i></a>
             {% else %}
