--- a/interface/templates/interface/login.html
+++ b/interface/templates/interface/login.html
@@ -3,19 +3,21 @@
 
 {% block title %}Brownish: Login{% endblock %}
 {% block body %}
-    <form action="{% url 'login' %}" method="POST">
-        <div id="form-background">
-        {% csrf_token %}
-        <h3>Login</h3>
-    <div class="form-group">
-        <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="Password">
-    </div>
-    <input class="btn btn-primary" type="submit" value="Log in">
-    <span>Don't have an account yet? <a href="{% url 'register' %}">Register here</a></span>
-    </div>    
+    <section class="credential">
+        <form action="{% url 'login' %}" method="POST">
+            <div id="form-background">
+            {% csrf_token %}
+            <h3>Login</h3>
+        <div class="form-group">
+            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <input class="btn btn-primary" type="submit" value="Log in">
+        <span>Don't have an account yet? <a href="{% url 'register' %}">Register here</a></span>
+        </div>    
+    </section>
 </form>
     
 {% endblock %}
