--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -383,6 +383,11 @@ header.sticky {
 
 }
 
+.center {
+    display: block;
+    margin: 0 auto;
+  }
+
 /* .viewblog {
     height: max-content;
     width: auto;
