--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -25,7 +25,7 @@
         
           <div class="block">
             <div>
-                <img src="{{ blog.image.url}}">
+                <img src="{{blog.image}}">
                 <p class="timestamp">{{blog.timestamp}}</p>
                 <a href="{% url 'blog_view' blog.pk %}"><p class="title">{{blog.title}}</p></a>
             </div>
