--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock  %}</title>
+    <meta name="robots" content="index, follow">
+    <!--Đây là đường link gốc của chính website này.  -->
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
+    <meta property="og:url" content="{{ request.build_absolute_uri }}">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="author" content="Brownish">
+    <meta name="twitter:creator" content="@brownishvn">
+	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
