--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -9,8 +9,8 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="{{blog.title}}">
         <meta property="og:description" content="{{blog.description}}">
-        <meta property="article:published_time" content="{{blog.timestamp}}">
-        <meta property="article:modified_time" content="{{blog.modified_timestamp}}">
+        <meta property="article:published_time" content="{% if blog.timestamp %}{{ blog.timestamp|date:"c" }}{% endif %}">
+        <meta property="article:modified_time" content="{% if blog.modified_timestamp %}{{ blog.modified_timestamp|date:"c" }}{% endif %}">
         <meta name="twitter:title" content="{{blog.title}}">
         <meta name="twitter:description" content="{{blog.description}}">
     {% endblock %}
