--- a/interface/templates/interface/product_view.html
+++ b/interface/templates/interface/product_view.html
@@ -4,6 +4,17 @@
     {% block title %}
     {{product.name}}
     {% endblock%}
+    {% block meta%}
+         <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
+        <meta name="description" content="{{product.description}}">
+        <meta property="og:type" content="article">
+        <meta property="og:title" content="{{product.name}}">
+        <meta property="og:description" content="{{product.description}}">
+        <meta property="article:published_time" content="2023-12-06T08:06:00+00:00">
+        <meta property="article:modified_time" content="2023-12-06T08:06:00+00:00">
+        <meta name="twitter:title" content="{{product.title}}">
+        <meta name="twitter:description" content="{{product.description}}">
+    {% endblock %}
    
 {% block body %}
     <!-- home section design -->
