--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -19,6 +19,8 @@
 body {
     color: var(--text-color);
     background: var(--bg-color);
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -107,7 +109,7 @@ ul li {
     display: none;
 }
 
-section {
+section:not(.home-index) {
     padding: 40px 11%;
 }
 
@@ -121,23 +123,81 @@ section {
     align-items: center;
 }
 .home-index {
-    height: 100vh;
+    box-sizing: border-box;
+    height: 85vh;
     width: 100%;
     background-color: #dbc1af;
     position: relative;
     gap: 1.5rem;
     display: grid;
     align-items:flex-end;
+    overflow: hidden;
     /* margin-top: 100px; */
 }
 
-.home-index img {
-    object-fit: cover;
+.slide-list {
     position: absolute;
-    width: 100%;
-    height: 100% ;
+    width: max-content;
+    height: 100%;
     border-radius: 15px;
+    top: 0;
+    left: 0;
+    display: flex;
+    transition: 1s all ease;
+
 }
+.slide-list img {
+    width: 100vw;
+    max-width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slide-buttons {
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.slide-buttons button {
+    width: 50px;
+    height: 50px;
+    border-radius: 35%;
+    background-color: rgba(123, 123, 123, 0.333);
+    color: #fff;
+    border: none;
+    font-family: monospace;
+    font-weight: bold;
+}
+
+.dots {
+    position: absolute;
+    bottom: 10px;
+    color: white;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dots li {
+    list-style-type: none;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(81, 81, 81);
+    margin: 20px;
+    border-radius: 20px;
+    transition: 1s all ease;
+}
+.dots li[class="dot-active"] {
+    background-color:rgb(200, 133, 131);
+}
+
 .home-text {
     background-color: springgreen;
     border-radius: 10px;
@@ -282,11 +342,16 @@ header.sticky {
 }
 
 .box {
+    box-sizing: border-box;
     position: relative;
     overflow-y: hidden;
     height: 480px;
-    padding: 0 5px;
-    
+    padding: 0;
+    background: linear-gradient(rgb(242, 242, 242) 80%, rgb(219, 215, 215));
+    border-radius: 10px;
+}
+.box:hover {
+    background: linear-gradient(rgb(255, 254, 254) 80%, rgb(233, 233, 233));
 }
 
 .box-img img {
@@ -299,6 +364,9 @@ header.sticky {
     transition: all .45s ease;
 }
 
+.box-content {
+    padding: 0 10px;
+}
 .box-img {
     /* background-color: springgreen; */
     display: flex;
@@ -322,7 +390,7 @@ header.sticky {
     font-size: var(--p-font);
     color: var(--other-color);
     font-weight: 500;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     height: 2.8em;
     line-height: 1.4em;
     overflow: hidden;
@@ -336,7 +404,7 @@ header.sticky {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    gap: 2rem;  
+    /* gap: 1rem;   */
 }
 
 .price {
@@ -349,6 +417,9 @@ header.sticky {
     font-size: 15px;
     font-weight: 600;
     transition: all 0.45s ease;
+}
+.product_name {
+    color: #853f16;
 }
 
 .price:hover {
@@ -685,5 +756,32 @@ body {
     font-size: 25px;
     font-weight: 600;
     color: red;
+}
+.paginator {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.paginator a {
+    display: inline-block;
+    margin: 0 5px;
+    padding: 5px 10px;
+    background-color: #e6e6e6;
+    border-radius: 5px;
+    color: rgb(48, 48, 48);
+}
+.paginator span {
+    display: inline-block;
+    background-color: rgb(92, 92, 254);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 0 5px;
+}
+.paginator a:hover, .paginator a:active {
+    background-color: rgb(92, 92, 254);
+    color: white;
+    border-radius: 5px;
+    font-weight: 500;
 }
 
