--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -1,5 +1,14 @@
-{% extends 'interface/layout.html ' %}
+{% extends 'interface/layout.html' %}
 {% block title%} Brownish - About us {% endblock %}
+{% block meta%}
+    <meta name="description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <!--Đây là đường link gốc của chính website này.  -->
+    <meta property="og:type" content="home">
+    <meta property="og:title" content="Brownish Clothing - Quần áo thời trang bền vững, bảo vệ môi trường - Brownish Clothing">
+    <meta property="og:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta name="twitter:title" content="Brownish Clothing - Quần áo thời trang bền vững, bảo vệ môi trường - Brownish Clothing">
+    <meta name="twitter:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    {% endblock %}
 {% block body %}
     <div id="page-type" style="display:none">aboutus</div>
     <section class="about-us-information">
