--- a/interface/templates/interface/login.html
+++ b/interface/templates/interface/login.html
@@ -7,15 +7,15 @@
         <form action="{% url 'login' %}" method="POST">
             <div id="form-background">
             {% csrf_token %}
-            <h3>Login</h3>
+            <h3>Đăng Nhập</h3>
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            <input autofocus class="form-control" type="text" name="username" placeholder="Tên đăng nhập">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="Mật khẩu">
         </div>
-        <input class="btn btn-primary" type="submit" value="Log in">
-        <span>Don't have an account yet? <a href="{% url 'register' %}">Register here</a></span>
+        <input class="btn btn-primary" type="submit" value="Đăng nhập">
+        <span>Chưa có tài khoản?<a href="{% url 'register' %}">Đăng ký tại đây</a></span>
         </div>    
     </section>
 </form>
