--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -23,9 +23,9 @@
 </head>
 {% block body %}
     <!-- home section design -->
-    <section class="home-index" style="height: 50vh;">
+    {% comment %} <section class="home-index" style="height: 50vh;">
         <img src="{%static 'interface/images/bg02.png' %}"> 
-    </section>
+    </section> {% endcomment %}
 
     <section class="viewblog">
         <!-- <div class="viewblog-img"><img src="{{blog.image}}" alt="Home Image"></div> -->
