--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -1,7 +1,7 @@
 {% extends "interface/layout.html" %}
 {% load static %}
 
-{% block title %}Brownish: Blogs{% endblock %}
+{% block title %}Trang Blog - Brownish Clothing{% endblock %}
     <!-- home section design -->
 {% block body %}
     <div id="page-type" style="display:none">blog</div>
