--- a/interface/templates/interface/login.html
+++ b/interface/templates/interface/login.html
@@ -1,7 +1,7 @@
 {% extends 'interface/layout.html' %}
 {% load static %}
 
-{% block title %}Brownish: Login{% endblock %}
+{% block title %}Đăng nhập - Brownish Clothing{% endblock %}
 {% block body %}
     <section class="credential">
         <form action="{% url 'login' %}" method="POST">
