--- a/interface/templates/interface/product_view.html
+++ b/interface/templates/interface/product_view.html
@@ -2,7 +2,7 @@
 {% load static %}
 
     {% block title %}
-    {{product.name}}
+    {{product.name}} - Brownish Clothing
     {% endblock%}
     {% block meta%}
          <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
