--- a/interface/templates/interface/register.html
+++ b/interface/templates/interface/register.html
@@ -1,7 +1,7 @@
 {% extends 'interface/layout.html' %}
 {% load static %}
 
-{% block title %}Brownish: Register{% endblock %}
+{% block title %}Đăng ký thành viên - Brownish Clothing{% endblock %}
 {% block body %}
     <form action="{% url 'register' %}" method="POST">
     <div id="form-background">
