--- a/interface/templates/interface/shopping_cart.html
+++ b/interface/templates/interface/shopping_cart.html
@@ -1,7 +1,7 @@
 {% extends "interface/layout.html" %}
 {% load static %}
 
-{% block title %}{{user.username}}: Giỏ hàng{% endblock title %}
+{% block title %}{{user.username}}: Giỏ hàng - Brownish Clothing{% endblock title %}
 {% block body %}
     {% if not items %}
     <h2>Giỏ hàng hiện tại của bạn đang trống</h2>
