--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -1,5 +1,5 @@
 {% extends 'interface/layout.html' %}
-{% block title%} Brownish - About us {% endblock %}
+{% block title%} Về chúng tôi - Brownish Clothing{% endblock %}
 {% block meta%}
     <meta name="description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
     <!--Đây là đường link gốc của chính website này.  -->
