--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -10,14 +10,14 @@
         <div class="home-text">
             <h4>Check what's on your blog!!</h4>
             <h1>Explore latest news about fashion</h1>
-            <a href="#" class="btn">Explore now</a>
+            <a href="#news_view" class="btn">Explore now</a>
         </div>
     </section>
 
     <!-- feature section design -->
     <section>
-        <div class="middle-text">
-            <h2>Discover more <span>Latest News.</span></h2>
+        <div id="news_view" class="middle-text">
+            <h2 >Discover more <span>Latest News.</span></h2>
         </div>
     </section>
     <section class="blog-container">
