--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -42,10 +42,10 @@
         <h3>Giá trị cốt lõi</h3>
         <p>
             <strong>Thấu hiểu</strong>: Chúng tôi với đội ngũ trẻ trung luôn cố gắng tìm hiểu giới trẻ để đáp ứng nhu cầu ngày càng đa dạng & 
-            nâng cao chất lượng cuộc sống của khách hàng.
+            nâng cao chất lượng cuộc sống của khách hàng.<br><br>
             <strong>Thân thiện</strong>: Những nhân công được làm việc trong môi trường lành mạnh sẵn sàng mang đến cho khách hàng sản phẩm và dịch vụ 
-            tốt nhất.
-            <strong>Sáng tạo</strong>: Những nhà thiết kế trẻ không ngừng nỗ lực để mang tới cho khách hàng những mẫu trang phục thanh lịch và độc đáo.
+            tốt nhất.<br><br>
+            <strong>Sáng tạo</strong>: Những nhà thiết kế trẻ không ngừng nỗ lực để mang tới cho khách hàng những mẫu trang phục thanh lịch và độc đáo.<br><br>
             <strong>Bền vững</strong>: Chúng tôi ứng dụng công nghệ mới, sử dụng chất liệu hữu cơ có nguồn gốc hoàn toàn từ Việt Nam để hạn chế tối đa các chế phẩm có hại 
             cho môi trường vào tạo nên những sản phẩm thân thiện với môi trường.
         </p>
