--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -8,9 +8,9 @@
     <section class="home">
         <div class="home-img"><img src="{% static 'interface/images/home_image.png' %}" alt="Home Image"></div>
         <div class="home-text">
-            <h4>Check what's on your blog!!</h4>
-            <h1>Explore latest news about fashion</h1>
-            <a href="#news_view" class="btn">Explore now</a>
+            <h4>Xem thử trang blog của bạn có gì!!</h4>
+            <h1>Khám phá những tin tức mới nhất về thời trang</h1>
+            <a href="#news_view" class="btn">Khám phá ngay</a>
         </div>
     </section>
 
