--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -27,6 +27,9 @@
             <div class="slide">
                 <img src="{% static 'interface/images/bg03.png' %}"> 
             </div>
+            <div class="slide">
+                <img src="{% static 'interface/images/bg04.jpg' %}"> 
+            </div>
         </div>
         <div class="slide-buttons">
             <button id="prev"><</button>
@@ -34,6 +37,7 @@
         </div>
         <ul class="dots">
             <li class="dot-active"></li>
+            <li></li>
             <li></li>
             <li></li>
         </ul>
