--- a/interface/templates/interface/shopping_cart.html
+++ b/interface/templates/interface/shopping_cart.html
@@ -1,9 +1,12 @@
 {% extends "interface/layout.html" %}
+{% load humanize %}
 {% load static %}
 
 {% block title %}{{user.username}}: Giỏ hàng - Brownish Clothing{% endblock title %}
 {% block body %}
+    <div id="page-type" style="display:none"></div>
     {% if not items %}
+    
     <h2>Giỏ hàng hiện tại của bạn đang trống</h2>
     {% else %}
     <section id="shopping_cart_section">
@@ -18,6 +21,7 @@
             </div>
         </div>
     {% endfor %}
+    <div id="sum_price"><h3>Tổng giá trị giỏ hàng: <span id="total_price"></span><span>VNĐ</span></h3></div>
     </section>
     {% endif%}
 {% endblock%}
