--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -33,7 +33,7 @@
             <h1>{{blog.title}}</h1>
             <p class="viewblog-timestamp">{{blog.timestamp}}</p>
             <p class="viewblog-creator">By: {{blog.creator}}</p>
-            <p class="viewblog-descripttion">{{blog.description}}</p>
+            {% comment %} <p class="viewblog-descripttion">{{blog.description}}</p> {% endcomment %}
             <p class="viewblog-content">{{blog.content|safe}}</p>    
             <!-- <h2>{{blog.title1}}</h2>   
             <p class="viewblog-content">{{blog.content1|safe}}</p>
