--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -15,6 +15,9 @@
 
 {% block body %}
     <!-- home section design -->
+    {% if user.is_authenticated %}
+    <span id="user_username" style="display: none">{{user.username}}</span>
+    {% endif %}
     <div id="page-type" style="display:none">index</div>
     <section class="home-index">
         <div class="slide-list">
@@ -108,6 +111,16 @@
                                 <span id="original">{{product.discount_price}}VNĐ</span>
                             {% endif %}
                         </div>
+                        <div class="product-likes" id={{product.id}}>
+                        {% if user.is_authenticated %}
+                            {% if request.user in product.likes.all %}
+                                <button class="like-btn2"><i class="fa-solid fa-heart"></i></button>
+                            {% else%}
+                                <button class="unlike-btn"><i class="fa-solid fa-heart"></i></button>
+                            {% endif %}
+                        {% else %}
+                                <button class="like-btn"><i class="fa-solid fa-heart" disabled></i></button>
+                        {% endif %}<span class="number-likes"></span></div>
                     </div>
                 </div>
             </div>
